[tool.poetry]
name = "pySigma-backend-stix2"
version = "0.2.0"
description = "STIX language backend for pySigma convertor. Forked from https://github.com/barvhaim/pySigma-backend-stix and updated to support latest pySigma versions."
authors = ["Cyber-center of Excellence <barha@il.ibm.com>", "AttackIQ <stephen.lincoln@attackiq.com>"]
license = "MIT"
repository = "https://github.com/slincoln-aiq/pySigma-backend-stix2"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = ">=0.9.5, <0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
